# cmake_cookbook

./: .gitignore  LICENSE  README.md
assimp/: CMakeLists.txt  README.md
imgui/: CMakeLists.txt  README.md
imgui/libs/imgui/: CMakeLists.txt
minizip/: CMakeLists.txt  README.md
nanovg/: CMakeLists.txt  README.md  torus.cpp
nanovg/libs/nanovg/: CMakeLists.txt
nanovg/src/: torus.cpp
zmq/: CMakeLists.txt  README.md
zmq/cmake/Modules/: FindZeroMQ-LICENSE.txt  README.txt
zmq/include/: config.h
zmq/src/: config.c  version.c  wuclient.c  wuserver.c
